fixed z-index for overlay

--- a/styles/board.css
+++ b/styles/board.css
@@ -252,7 +252,7 @@ body {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   display: none;
-  z-index: 1;
+  z-index: 500;
 }
 
 body.no-scroll {
@@ -271,7 +271,7 @@ body.no-scroll {
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
   transform: translateY(-50%);
   transition: right 0.3s ease-in-out;
-  z-index: 2; /* Über dem Overlay */
+  z-index: 502; /* Über dem Overlay */
 }
 
 .task-form.active {
